cabal-version: >= 1.2
name:          LambdaHack
version:       0.1.20080404
license:       GPL
author:        Andres Loeh <mail@andres-loeh.de>
maintainer:    Andres Loeh <mail@andres-loeh.de>
description:   a small roguelike game

flag gtk
  description:   enable gtk support
  default:       False

executable LambdaHack
  main-is:       LambdaHack.hs
  build-depends: base >= 3, containers >= 0.1, binary >= 0.4,
                 random >= 1, zlib >= 0.4, bytestring >= 0.9,
                 directory >= 1, mtl >= 1.1, vty == 4.7.5
  extensions:    CPP
